# BuildingGPT

./: .gitignore  README.md  infer.py  license.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
core/: models.py  options.py  pointcloud_filter.py  provider.py  utils.py
core/transformer/: attention.py  modeling_opt.py  point.py
scripts/: cloudcompy_shell.sh  dublincity_entity_report.py  dublincity_semantic_summary.py  split_dublincity_buildings.py  visualize_building_clusters.py
